--- a/Projects.html
+++ b/Projects.html
@@ -32,6 +32,7 @@
              <div class="card">
                <ul>
                   <strong> Passion Project </strong>
+                  <
                   In 5th Grade we had to do a Passion Project.
                 </ul>
                </div></div>
@@ -67,3 +68,5 @@
     </div>
   </foot>
 </html>
+
+target="_blank"
