--- a/Photo Slideshow.html
+++ b/Photo Slideshow.html
@@ -1,3 +1,3 @@
 <a
-        href="Photo Slideshow.html" class="nav-link nav-item"> Click here to see photos of all my vacations.</a>
+        href="Vacations.html" class="nav-link nav-item"> Click here to go back to my Vacations.</a>
         
