started projects and finished fotter

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -36,10 +36,10 @@ Ever since I started Elementary school I knew that I loved animals and ocean ani
 	</p>
   <foot>
     <div class="jumbotron">
-      <a href="https://harvest.pleasantonusd.net/">
+      <a href="https://harvest.pleasantonusd.net/"target="_blank">
         <img src= "Images/HP icon.png" Height="85">
       </a>
-      <a href="http://livermoredance.com/">
+      <a href="http://livermoredance.com/"target="_blank">
         <img src= "Images/LSOD icon.png" Height="100">
       </a>
     </div>
