--- a/Vacations.html
+++ b/Vacations.html
@@ -86,10 +86,10 @@
   </body>
   <foot>
     <div class="jumbotron">
-      <a href="https://harvest.pleasantonusd.net/">
+      <a href="https://harvest.pleasantonusd.net/"target="_blank">
         <img src= "Images/HP icon.png" Height="85">
       </a>
-      <a href="http://livermoredance.com/">
+      <a href="http://livermoredance.com/"target="_blank">
         <img src= "Images/LSOD icon.png" Height="100">
       </a>
     </div>
