--- a/Vacations.html
+++ b/Vacations.html
@@ -75,10 +75,9 @@
                   <li> Half Moon Bay </li>
                   <li> The Zoo </li>
                 </ul>
-                <p>
-                <a
-              href="Photo Slideshow.html" class="nav-link nav-item"> Click here to see photos of all my vacations.</a>
-                </p>
+                <p> <a
+      href="Photos.html" class="nav-link nav-item"target="_blank"> Click here to see photos of my vacations</a>
+      <a </p>
                </div>
               </div> 
             </div>
