--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       I am going into 
        <em> 7th grade </em> 
       and go to 
-       <strong> Harvest Park </strong>.
+       <strong> School </strong>.
     </div>
      <p>
        <div class="container">
@@ -43,8 +43,8 @@
              <div class="card">
                <ol>
                 Here are some things about myself.
-                  <li> I am 12 years old </li>
-                  <li> My Birthday is in August</li>
+                  <li> I am <strong> age </strong> years old </li>
+                  <li> My Birthday is in <strong> monnth </strong></li>
                   <li> I do ballet as a sport </li>
                 </ol>
                </div>
