harvest.pleasantonusd.net and http://livermoredance.com

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -23,7 +23,7 @@
       <h1>About Me</h1>
     </div>
      <p>
-       <img src= "Images/SadiePicture.png" height="240">
+       <img src= "Images/.png" height="240">
   </body>
 </html>
         
