--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
    </p> 
     <foot>
     <div class="jumbotron">
-      <a href="https://harvest.pleasantonusd.net/"target="_blank">
-        <img src= "Images/HP icon.png" Height="85">
+      <a href="https:///"target="_blank">
+        <img src= "Images/.png" Height="85">
       </a>
-      <a href="http://livermoredance.com/"target="_blank">
-        <img src= "Images/LSOD icon.png" Height="100">
+      <a href="/"target="_blank">
+        <img src= "Images/.png" Height="100">
       </a>
     </div>
   </foot>
